
OPTION(CURL_IS_STATIC "on if curl is a static lib " ON)
MARK_AS_ADVANCED(CURL_IS_STATIC)

IF(WIN32)
    IF(MSVC)
        SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /NODEFAULTLIB:MSVCRT")
    ENDIF(MSVC)
    IF(CURL_IS_STATIC)
        ADD_DEFINITIONS(-DCURL_STATICLIB)
        SET(TARGET_EXTERNAL_LIBRARIES ws2_32 winmm)
    ENDIF(CURL_IS_STATIC)
ENDIF(WIN32)

SET(TARGET_SRC 
    ReaderWriterWCS.cpp
    WCS10Source.cpp
    WCS11Source.cpp
)

SET(TARGET_H
    WCS10Source.h
    WCS11Source.h
    WCSOptions
)

SET(TARGET_LIBRARIES_VARS)
SET(TARGET_COMMON_LIBRARIES osgEarthUtil)

SETUP_PLUGIN(osgearth_wcs)

# to install public driver includes:
SET(LIB_NAME wcs)
SET(LIB_PUBLIC_HEADERS WCSOptions)
INCLUDE(ModuleInstallOsgEarthDriverIncludes OPTIONAL)
